--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Docify</title>
+    <title>Robotics Society | Docify</title>
+    <meta name="description" content="Docify is a tool developed by the Robotics Society of Punjab Engineering College to generate Room permissions efficiently." />
+    <meta name="keywords" content="Docify, Room Permission Generator, Punjab Engineering College, PEC Robotics Society, Automation, Permission Tool" />
+    <meta name="author" content="PEC Robotics Society" />
+    <meta property="og:title" content="Docify - Room Permission Generator | PEC Robotics Society" />
+    <meta property="og:description" content="An innovative tool by PEC Robotics Society to streamline the Room permission process at Punjab Engineering College." />
+    <meta property="og:image" content="/images/docify-banner.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://docify.pecrobotics.com" />
+    <link rel="canonical" href="https://docify.pecrobotics.com" />
   </head>
   <body>
     <div id="root"></div>
