--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="/images/docify-banner.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://docify.pecrobotics.com" />
-    <link rel="canonical" href="https://docify.pecrobotics.com" />
+    <link rel="canonical" href="https://roboticspec.com/docify" />
   </head>
   <body>
     <div id="root"></div>
